@@ -8,6 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     application
+    jacoco
 }
 
 repositories {
@@ -24,12 +25,25 @@ dependencies {
     testImplementation("org.powermock:powermock-api-mockito2:2.0.9")
     implementation("org.apache.logging.log4j:log4j-core:2.24.2")
     implementation("org.apache.logging.log4j:log4j-api:2.24.2")
+    implementation("io.cucumber:cucumber-java:7.23.0")
+    testImplementation("io.cucumber:cucumber-junit:7.23.0")
     // This dependency is used by the application.
     implementation(libs.guava)
 }
 
 tasks.test {
-//    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
+}
+tasks.jacocoTestReport {
+    dependsOn(tasks.test) // tests are required to run before generating the report
+}
+
+tasks.jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
+    }
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
